<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/layout_bg">

    <com.example.travelplanner.base.views.ScreenHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            app:primaryText="@string/trips_list_title"/>

    <View
            style="@style/Divider"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"/>

    <ProgressBar
            android:id="@+id/progressView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"/>

    <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            tools:text="@string/trips_list_empty_message"
            android:textAppearance="@style/TextAppearancePrimary"
            android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tripsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"/>

    <TextView
            style="@style/ActionButton"
            android:id="@+id/actionButton"
            android:layout_width="match_parent"
            android:layout_margin="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/trips_list_action"/>

</LinearLayout>